---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    - Added Ukranian translation (Thanks Met en Bouldry!)
  Bugfixes:
    -

---------------------------------------------------------------------------------------------------
Version: 1.1.60
Date: 31. 12. 2022
  Changes:
    - Updated to the new flib translation library for faster translations, requiring a bump of the minimum flib version to 0.9.2 and a minimum Factorio version of 1.1.74
    - Added Spanish localisation (Thanks MarXam!)
    - Filtered out dummy entities from the 'Ghost on Water' mod
  Bugfixes:
    - Fixed a crash when deleting the last subfactory in the list
    - Fixed a migration crash when adding the example subfactory with Industrial Revolution loaded
    - Fixed a crash when clicking the ingredient combinator button without any ingredients present
    - Fixed a crash caused by a mod adding trains with a capacity of zero
    - Fixed an issue where pasting a larger amount of modules onto a smaller amount of available slots would not calculate the effects correctly
    - Fixed an issue where copy/pasting a machine would not respect module compatibility
    - Fixed an issue where exporting ingredients to combinator would leave out items with amounts below 1
    - Fixed that lines with subfloor would not be grayed out as desired when checked off in the compact dialog

---------------------------------------------------------------------------------------------------
Version: 1.1.59
Date: 19. 09. 2022
  Features:
    - Added a button to unfold subfloors, meaning they will be shown on the top level without needing to go down into them
    - Added a preference that, when enabled, adds a subfactory's products as icons to its name in the subfactory list
    - Added the ability to paste whole lines as top level products, setting product amounts and copying the line(s) over
  Changes: